fix generating the .a file when using make all and change to make install add credits

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,3 +25,6 @@ Nintendo GameCube/Wii port authors in alphabetical order:
 
 Rhys "Shareese" Koedijk
 Dimok
+
+Sony Playstation 2 port authors in alphabetical order:
+André Guilherme Mendes da luz bastos
