--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,8 @@
-
 Present authors of ntfs-3g in alphabetical order:
 
 Jean-Pierre Andre
 Alon Bar-Lev
+Martin Bene
 Dominique L Bouix
 Csaba Henk
 Bernhard Kaindl
